# rust-stm32-temperature

./: .hgignore  Cargo.toml  LICENSE  README.md  device.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
bme280/: Cargo.toml
bme280/src/: bme280.rs  humidity.rs  lib.rs  pressure.rs  temperature.rs
model/: README.md  temperature_sensor.FCStd  temperature_sensor_body.stl  temperature_sensor_cap.stl
src/: main.rs
